# ImageFilter

./: CMakeLists.txt  blur.cpp  crop.cpp  crop.h  edge.h  filter.h  gray_scale.cpp  image.cpp  image.h  image_processor.cpp  image_processor.h  paint.cpp  paint.h  parser.h  readme.md  sharp.cpp  sharp.h  sketch.h  wave.cpp  wave.h
command-parser/: parser.cpp  parser.h
custom_filters/: paint.cpp  paint.h  sketch.cpp  sketch.h  wave.h
filters/: edge.cpp  filter.h  glass.h  negative.h
filters/basic/: blur.h  filter.h  gray_scale.h  negative.cpp
filters/custom/: glass.cpp  glass.h  paint.cpp  paint.h  sketch.h  wave.h
image/: image.cpp  image.h
